🎉 feat: completed the related interfaces and functionalities of the Proposal Competition